--- a/src/lib/main.css
+++ b/src/lib/main.css
@@ -25,8 +25,16 @@
   .loader {
     border-top-color: rgb(31, 41, 55);
   }
+  .button-icon {
+    height: 1.125rem;
+    width: 1.125rem;
+    margin-top: -0.2rem;
+  }
   .pulse-right {
     animation: pulse-right 0.75s linear 0s infinite alternate;
+  }
+  .smooth-scroll {
+    scroll-behavior: smooth;
   }
 }
 
