--- a/src/lib/main.css
+++ b/src/lib/main.css
@@ -36,6 +36,12 @@
   .h-screen-1\/2 {
     height: 50vh;
   }
+
+  @media screen and (max-width: 767px) {
+    .-md-zoom-small {
+      zoom: 80%;
+    }
+  }
 }
 
 /* prose */
